--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=auth-service
+spring.application.name=AUTH-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/store_micro
 spring.datasource.username=root
 spring.datasource.password=root
