--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=order-service
+spring.application.name=ORDER-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/store_micro
 spring.datasource.username=root
 spring.datasource.password=root
