--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,10 +1,1 @@
-spring.application.name=ORDER-SERVICE
-spring.datasource.url=jdbc:mysql://localhost:3306/store_micro
-spring.datasource.username=root
-spring.datasource.password=root
-
-spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.MySQL8Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.application.name=order-service
